--- a/test.yml
+++ b/test.yml
@@ -1,21 +1,1 @@
----
-- name: Test install name
-  hosts: fasten_localhosts
-  remote_user: root
-# https://docs.ansible.com/ansible/latest/user_guide/playbooks_intro.html
-
-  tasks:
-  - name: Notepadplusplus install
-    win_chocolatey:
-      name: notepadplusplus
-      state: latest
-
-# https://docs.ansible.com/ansible/latest/collections/chocolatey/chocolatey/win_chocolatey_module.html
-# Or
-#  win_chocolatey:
-#    name: notepadplusplus
-#    version: '6.6'
-
-#procexp
-#windirstat
-
+Total fail test
